2025-12-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

2025-12-12  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_system.R: Wrap suppressMessages() around three
	tests for long-obsolete linker and compiler flags

	* inst/include/Rcpp/Environment.h: Replace use of Rf_findVarInFrame
	with R_getVarEx (or R_getVar) if R 4.5.0 or later is used
	* inst/include/Rcpp/Function.h: Idem
	* src/barrier.cpp: Idem

2025-12-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* inst/include/Rcpp/Rmath.h: Do not access Rf_rnbeta
	* inst/include/Rcpp/sugar/undoRmath.h: Remove #undef

2025-12-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem
	* inst/NEWS.Rd: Updated

2025-12-04  Iñaki Ucar <iucar@fedoraproject.org>

	* inst/include/Rcpp/r/headers.h: Include <R_ext/Visibility.h>
	* inst/include/RcppCommon.h: Drop <R_ext/Callbacks.h>, not used anymore
	and dropped from the API; drop <R_ext/Visibility.h>, included above
	* src/api.cpp: Drop <R_ext/PrtUtil.h>, dropped from the API

2025-12-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

2025-12-02  Dirk Eddelbuettel  <edd@debian.org>

	* R/loadRcppModules.R: Remove file with function deprecated years ago
	* man/loadRcppModules-deprecated.Rd: Idem
	* NAMESPACE: Remove reference to loadRcppModules()
	* man/loadModule.Rd: Idem
	* man/Rcpp-deprecated.Rd: Idem
	* vignettes/rmd/Rcpp-modules.Rmd: Idem

2025-12-01  Kevin Ushey <kevinushey@gmail.com>

	* R/Attributes.R: Update OpenMP plugin for macOS

2025-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppLdpath.R: Revisit deprecation warnings via 'message()' to be